deploy/kubernetes/basicauth.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: etd-basicauth
spec:
  basicAuth:
    secret: etd-basicauth
    realm: 'ETD Preview'
