deploy/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: etd-web
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.middlewares: etd-dev-etd-basicauth@kubernetescrd
spec:
  tls:
    - hosts:
        - etd.it-blue.net
      secretName: etd-it-blue-net-tls
  rules:
    - host: etd.it-blue.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: etd-web
                port:
                  number: 8080
